--- a/CDVGeoCoder.xctemplate/index.html
+++ b/CDVGeoCoder.xctemplate/index.html
@@ -88,12 +88,15 @@
             <li>Add your allowed <strong>hosts</strong> in Cordova.plist/ExternalHosts (wildcards OK, don't enter the URL scheme)</li>
         </ol>
         
-        <button onclick="geoCode.showGeoView('http://google.com');">Click to showGeoView!</button>
-        <button onclick="geoCode.getLocation('Tampa FLorida');">Click to getLocation!</button>
+        <button onclick="geoCode.showGeoView('Adobe Systems Incorporated 1540 Broadway, 17th Floor New York, NY 10036');">Click to showGeoView!</button>
+        <button onclick="geoCode.showGeoView('Adobe Systems Incorporated 7930 Jones Branch Drive, Fifth Floor McLean, VA 22102');">Click to showGeoView!</button>
+        <button onclick="geoCode.showGeoView('Adobe Systems Incorporated 345 Park Avenue San Jose, CA 95110-2704');">Click to showGeoView!</button>
         <button onclick="geoCode.getLocation('Adobe Systems Incorporated 7930 Jones Branch Drive, Fifth Floor McLean, VA 22102');">Click to getLocation Adobe DC!</button>
         <button onclick="geoCode.getLocation('Adobe Systems Incorporated 345 Park Avenue San Jose, CA 95110-2704');">Click to getLocation Adobe San Jose!</button>
-        <button onclick="geoCode.getLocation(' Adobe Systems Incorporated 1540 Broadway, 17th Floor New York, NY 10036');">Click to getLocation of Adobe NYC!</button>
-        <button onclick="cordova.exec('___FILEBASENAME___.showGeoView', 'http://google.com');">Click to exec showGeoView!</button>
+        <button onclick="geoCode.getLocation('Adobe Systems Incorporated 1540 Broadway, 17th Floor New York, NY 10036');">Click to getLocation of Adobe NYC!</button>
+        <button onclick="cordova.exec('___FILEBASENAME___.showGeoView', 'Adobe Systems Incorporated 1540 Broadway, 17th Floor New York, NY 10036');">Click to exec showGeoView!</button>
+        <button onclick="cordova.exec('___FILEBASENAME___.showGeoView', 'Adobe Systems Incorporated 7930 Jones Branch Drive, Fifth Floor McLean, VA 22102');">Click to exec showGeoView!</button>
+        <button onclick="cordova.exec('___FILEBASENAME___.showGeoView', 'Adobe Systems Incorporated 7930 Jones Branch Drive, Fifth Floor McLean, VA 22102');">Click to exec showGeoView!</button>
         
     </body>
 </html>
